--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "keywords": ["git", "gitrush", "push", "commit hash"],
+  "keywords": [
+    "git",
+    "gitrush",
+    "push",
+    "commit hash"
+  ],
   "main": "./src/extension.js",
   "contributes": {
     "commands": [
@@ -30,7 +35,8 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
+    "test": "node ./test/runTest.js",
+    "deploy": "vsce publish --yarn"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
@@ -38,6 +44,7 @@
     "@types/node": "16.x",
     "@types/vscode": "^1.78.0",
     "@vscode/test-electron": "^2.3.0",
+    "@vscode/vsce": "^2.19.0",
     "esbuild": "^0.17.19",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
