--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "lint": "eslint .",
     "pretest": "npm run lint",
     "test": "node ./test/runTest.js",
-    "deploy": "vsce publish"
+    "deploy": "vsce publish",
+    "package": "vsce package"
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
