--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,4 @@
-on:
-  release:
-    types:
-      - published
+on: workflow_dispatch
 
 jobs:
   build-test:
@@ -11,8 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
+      - name: Package
+        run: npm run package
+
+      - name: Upload release assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish
-        if: success() && startsWith(github.ref, 'refs/tags/')
+        if: success()
         run: npm run deploy
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
