--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,10 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-test
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+
       - name: Package
-        run: |
-          | cd ../
-          | npm run package
+        run: npm run package
 
       - name: Upload release assets
         uses: actions/upload-release-asset@v1
@@ -20,8 +26,6 @@ jobs:
 
       - name: Publish
         if: success()
-        run: |
-          | cd ../
-          | npm run deploy
+        run: npm run deploy
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
