--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,20 @@
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Release name - "Release x.y.z"'
+        required: true
+        type: string
+      tagName:
+        description: 'Release tag name - "release-x.y.z"'
+        required: true
+        type: string
 
 jobs:
-  build-test:
-    uses: ./.github/workflows/build-test.yml
-
   publish:
     runs-on: ubuntu-latest
-    needs: build-test
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -16,11 +24,20 @@ jobs:
         with:
           node-version: 18.x
 
+      - name: Install packages
+        run: npm ci
+
       - name: Package
         run: npm run package
 
-      - name: Upload release assets
-        uses: actions/upload-release-asset@v1
+      - name: Create release
+        uses: softprops/action-gh-release@v0.1.15
+        with:
+          name: ${{ github.event.inputs.name }}
+          tag_name: ${{ github.event.inputs.tagName }}
+          fail_on_unmatched_files: true
+          body_path: CHANGELOG.md
+          files: "*.vsix"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
